--- a/css/main.css
+++ b/css/main.css
@@ -104,8 +104,46 @@ Input, textarea : 16px/1.5 'Roboto-Ragular', Arial, sans-serif;
   75% {
     box-shadow: -13px 20px 0 rgba(5, 35, 58, 0.2), 13px 20px 0 rgba(5, 35, 58, 0.2), 13px 46px 0 rgba(5, 35, 58, 0.2), -13px 46px 0 #05233a; } 
 }
+.progress {
+ 
+  display: flex;
+  overflow: hidden;
+  font-size: .75rem;
+  line-height: 1rem;
+  text-align: center;
+  background-color: #e9ecef;
+  border-radius: .25rem;
+  margin-top: -23px;
+  margin-left: 289px;
+}
+.vrh{
+  margin-top: -24px;
+  color: #60bb46;
+  margin-left:204px;
+}
 
-
+.vrh2{
+  margin-top: -33px;
+  color: #60bb46;
+  margin-left:292px;
+}
+.kakodoci{
+  margin-top: -80px;
+  margin-left: 105px;
+  font-size: 30px;
+}
+.kakodoci2{
+  margin-top: -80px;
+  margin-left: 105px;
+  font-size: 30px;
+}
+.imgkakodoci{
+  width: 18%;
+}
+.imgkakodoci2{
+  width: 18%;
+  margin-top: 20px;
+}
 /*------------------------- Our Solution -------------------*/
 .our-solution .single-solution-block {margin-top: 55px;text-align: center;background: #fff;}
 .our-solution .single-solution-block .icon {margin: 0 auto;}
@@ -639,7 +677,7 @@ z-index: 1;
   max-width: calc(100% - 20px);
   max-height: 150%;
   position:absolute;
-  top: 6px; 
+  top: 0px; 
   left: -87px; 
   bottom: 0;
   margin: auto;
@@ -726,7 +764,7 @@ z-index: 1;
 }
 
 .header-v2 .menu-desktop .main-menu > li > a {
-  color: #ddd;
+  color: #60bb46;
 }
 
 .header-v3 .menu-desktop {
@@ -833,7 +871,7 @@ z-index: 1;
 /*---------------------------------------------*/
 .menu-desktop .main-menu > li:hover > a {
   text-decoration: none;
-  color: #16a086;
+  color: #7eca68;
 }
 
 .menu-desktop .main-menu > li:hover > .sub-menu {
@@ -876,8 +914,8 @@ z-index: 1;
 }
 
 .header-v2 .fix-menu-desktop .wrap-menu-desktop {
-  background-color: rgba(5,35,58,0.95);
-  border-color: rgba(5,35,58,0.95);
+  background-color: rgba(255, 255, 255, 0.95);;
+  border-color: rgba(255, 255, 255, 0.95);
 }
 
 
@@ -1106,6 +1144,7 @@ z-index: 1;
 .rev_slider_2 .tp-caption,
 .rev_slider_1 .tp-caption {
   white-space: normal !important;
+  color: #000;
 }
 
 /*---------------------------------------------*/
@@ -1133,7 +1172,7 @@ z-index: 1;
   font-family: Roboto-Regular;
   font-size: 14px !important;
   text-transform: uppercase;
-
+color: black;
   width: 150px;
   height: 50px;
   padding: 5px 15px !important;
@@ -1167,7 +1206,7 @@ z-index: 1;
 #rev_slider_1 .btn2:hover,
 #rev_slider_1 .btn1:hover {
   background-color: #05233a;
-  color: #fff;
+  color: rgb(0, 0, 0);
 }
 
 
@@ -2586,6 +2625,13 @@ input.num-product::-webkit-inner-spin-button {
   line-height: 1.2;
   letter-spacing: 1px;
 }
+.t1-b-1-osobna{
+  font-family: Roboto-Bold;
+  font-size: 36px;
+  line-height: 1.2;
+  letter-spacing: 1px;
+  margin-left: 164px;
+}
 .t1-b-1-vijesti{
   font-family: Roboto-Bold;
   font-size: 36px;
@@ -2635,7 +2681,11 @@ input.num-product::-webkit-inner-spin-button {
   width: 80px;
   height: 3px;
 }
-
+.size-a-2-osobna{
+  width: 80px;
+  height: 3px;
+  margin-left: 245px;
+}
 .size-a-3 {
   width: 100%;
   height: 50px;
@@ -2908,7 +2958,7 @@ input.num-product::-webkit-inner-spin-button {
   height: 100%;
   top: 0;
   left: 0;
-  background: #246f26;
+  background: #293129d1;
 }
 
 .kit-overlay1::before {opacity: 0.9;}
